@@ -1,6 +1,7 @@
 2014-12-20  Ben Finney  <ben+python@benfinney.id.au>
 
     * Remove custom test suite creation, we now use ‘unittest2’.
+    * Discriminate Python 2-and-3 compatible usage of dict methods.
 
 2014-12-17  Ben Finney  <ben+python@benfinney.id.au>
 
